--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "passport-saml",
-  "version": "2.0.5",
+  "name": "passport-saml-hooks",
+  "version": "2.0.6",
   "description": "SAML 2.0 authentication strategy for Passport",
   "keywords": [
     "saml",
